Fixes edge cases of menu flying off screen

--- a/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
+++ b/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
@@ -69,6 +69,12 @@
         top: 0 !important;
         margin-top: 0 !important;
         overflow-y: auto;
+
+        .one_article {
+          .ama__article-stub:nth-child(2n) {
+            display: none;
+          }
+        }
       }
     }
 
